kubernetes/traefik/whoami-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  rules:
    - host: test.example.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami-service
                port: 
                  number: 80
